--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Hustle - the best gaming newspaper ever</title>
+    <title>Hustle - the best game store ever</title>
 </head>
 <body>
-    
+    <main class="main">
+
+    </main>
 </body>
 </html>
