--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Hustle - the best game store ever</title>
+    <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
     <main class="main">
