--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
 </head>
 <body>
     <main class="main">
-        
+        <div class="main__bg">
+        <nav class="main__nav main-nav">
+            <div class="nav__elem1 nav-elem1">
+                <div class="elem1__imgContainer">
+                    <img src="./img/logo.svg" alt="" class="elem1__img">
+                </div>
+                <div class="elem1__text">
+                    <p class="elem1__text1">Game</p>
+                    <p class="elem1__text2">Store</p>
+                </div>
+            </div>
+            <div class="nav__elem2 nav-elem2">
+                <div class="elem2__searchContainer">
+                    <div class="elem2__search">Search...</div>
+                </div>
+                <div class="elem2__bin">
+                    <div class="elem2__text">1</div>
+                </div>
+            </div>
+        </nav>
+        <div class="main__description main-description">
+            <div class="description__square">
+                <h1 class="description__h1">The best devices at the best prices
+                </h1>
+                <p class="description__text"> We make every effort to create the best opportunity to make the right and informed choice. Сontinues in stores, where our priority is to give visitors the opportunity to personally evaluate the qualities of the products of interest and, accordingly, to make a purchase decision based not on the inscriptions on the packaging, but on personal experience.
+                </p>
+                <div><a href="#" class="description__link">
+                    <div class="description__button">GO TO SHOP</div>
+                </a></div>
+            </div>
+        </div>
+    </div>
     </main>
 </body>
 </html>
