--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
         </nav>
         <div class="main__description main-description">
             <div class="description__square">
+                <div class="description__imgContainer">
+                    <img src="./img/Rectangle.svg" alt="" class="description__img">
+                </div>
                 <h1 class="description__h1">The best devices at the best prices
                 </h1>
                 <p class="description__text"> We make every effort to create the best opportunity to make the right and informed choice. Сontinues in stores, where our priority is to give visitors the opportunity to personally evaluate the qualities of the products of interest and, accordingly, to make a purchase decision based not on the inscriptions on the packaging, but on personal experience.
                 </p>
-                <div><a href="#" class="description__link">
+                <div class="description__buttonContainer">
+                    <a href="#" class="description__link">
                     <div class="description__button">GO TO SHOP</div>
-                </a></div>
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
+        </div>
     </main>
 </body>
 </html>
