--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="main">
-        <section class="recomendation">
+        <section class="recommendation">
             <section class="HU-1-3">
                 <div class="HU-1-3__leftpanel">
                     <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
