--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <main class="main">
         <section class="recommendation">
+            <section>
+
+            </section>
             <section class="HU-1-3">
                 <div class="HU-1-3__leftpanel">
                     <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
@@ -28,6 +31,9 @@
                     </div>
                 </div>
             </section>  
+            <section>
+                
+            </section>
         </section>
     </main>
 </body>
