--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
         </section>
         <section class="HU-1-3">
             <div class="HU-1-3__leftpanel">
-                <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
-                <h1>Kraken Kitty </h1>
-                <img class="leftpanel__img2" src="./img/image 9 (1).svg" alt="">
-                <img class="leftpanel__backimg" src="/Hustle-third/img/figure.svg" alt="">
+                <img class="leftpanel__backimg" src="./img/figure.svg" alt="">
+                <div class="leftpanel__content">
+                    <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
+                    <h1>Kraken Kitty </h1>
+                    <img class="leftpanel__img2" src="./img/image 9 (1).svg" alt="">
+                    </div>
             </div>
             <div class="HU-1-3__rightpanel">
-                <h2>RAZER Kraken Kitty, Quartz (RZ04-02980200-R3M1)</h2>
-                <h3> STARTING FROM  <span>$ 249.99</span></h3>
+                <p class="h2">RAZER Kraken Kitty, Quartz (RZ04-02980200-R3M1)</p>
+                <p class="h3"> STARTING FROM  <span>$ 249.99</span></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
                 natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
                 <div class="rightpanel__link">
-                    <a href="#"><b>BUY NOW</b></a>
+                    <a href="#">BUY NOW</a>
                     <hr>
                 </div>
             </div>
