--- a/index.html
+++ b/index.html
@@ -9,7 +9,60 @@
 </head>
 <body>
     <main class="main">
-        
+      
     </main>
+    <section class="recommendation">
+        <section class="HU-1-2">
+            <h2 class="HU-1-2__h2">The Store Recommends Viewing</h2>
+            <div class="HU-1-2__product">
+                <div class="product__info">
+                    <h2 class="info__h2">Koi Series Camellia Desk MatZDB011-01</h2>
+                    <div class="info__prices">
+                        <p class="info__starting">STARTING FROM</p>
+                        <p class="info__price">$ 12.99</p>
+                    </div>
+                    <p class="info__lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                    <a href="" class="info__buy">BUY NOW</a>
+                </div>
+                <div class="product__img">
+                    <img src="./img/image 14.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="HU-1-3">
+            <div class="HU-1-3__leftpanel">
+                <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
+                <h1>Kraken Kitty </h1>
+                <img class="leftpanel__img2" src="./img/image 9 (1).svg" alt="">
+                <img class="leftpanel__backimg" src="./img/figure.svg" alt="">
+            </div>
+            <div class="HU-1-3__rightpanel">
+                <h2>RAZER Kraken Kitty, Quartz (RZ04-02980200-R3M1)</h2>
+                <h3> STARTING FROM  <span>$ 249.99</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                <div class="rightpanel__link">
+                    <a href="#"><b>BUY NOW</b></a>
+                    <hr>
+                </div>
+            </div>
+        </section>  
+        <section class="HU-1-4">
+            <div class="HU-1-4__product">
+                <div class="product__info">
+                    <h2 class="info__h2">Koi Series Camellia Desk MatZDB011-01</h2>
+                    <div class="info__prices">
+                        <p class="info__starting">STARTING FROM</p>
+                        <p class="info__price">$ 12.99</p>
+                    </div>
+                    <p class="info__lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                    <a href="" class="info__buy">BUY NOW</a>
+                </div>
+                <div class="product__img">
+                    <img src="./img/image 15.svg" alt="">
+                </div>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
