--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="HU-1-3__leftpanel">
                 <img class="leftpanel__backimg" src="./img/figure.svg" alt="">
                 <div class="leftpanel__content">
-                    <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
+                    <img class="leftpanel__img1" src="./img/image 9 (1).png" alt="">
                     <h1>Kraken Kitty </h1>
-                    <img class="leftpanel__img2" src="./img/image 9 (1).svg" alt="">
+                    <img class="leftpanel__img2" src="./img/image 9.png " alt="">
                     </div>
             </div>
             <div class="HU-1-3__rightpanel">
