--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="main__nav main-nav">
             <div class="nav__elem1 nav-elem1">
                 <div class="elem1__imgContainer">
-                    <img src="./img/logo.svg" alt="" class="elem1__img">
+                    <img src="./img/main/logo.svg" alt="" class="elem1__img">
                 </div>
                 <div class="elem1__text">
                     <p class="elem1__text1">Game</p>
@@ -32,7 +32,7 @@
         <div class="main__description main-description">
             <div class="description__square">
                 <div class="description__imgContainer">
-                    <img src="./img/Rectangle.svg" alt="" class="description__img">
+                    <img src="./img/main/Rectangle.svg" alt="" class="description__img">
                 </div>
                 <h1 class="description__h1">The best devices at the best prices
                 </h1>
