--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="main__nav main-nav">
             <div class="nav__elem1 nav-elem1">
                 <div class="elem1__imgContainer">
-                    <img src="./img/logo.svg" alt="" class="elem1__img">
+                    <img src="./img/main/logo.svg" alt="" class="elem1__img">
                 </div>
                 <div class="elem1__text">
                     <p class="elem1__text1">Game</p>
@@ -32,7 +32,7 @@
         <div class="main__description main-description">
             <div class="description__square">
                 <div class="description__imgContainer">
-                    <img src="./img/Rectangle.svg" alt="" class="description__img">
+                    <img src="./img/main/Rectangle.svg" alt="" class="description__img">
                 </div>
                 <h1 class="description__h1">The best devices at the best prices
                 </h1>
@@ -47,5 +47,59 @@
         </div>
         </div>
     </main>
+    <!-- asdfsidjfoisdjfoisdjof -->
+    <section class="recommendation">
+        <section class="HU-1-2">
+            <h2 class="HU-1-2__h2">The Store Recommends Viewing</h2>
+            <div class="HU-1-2__product">
+                <div class="product__info">
+                    <h2 class="info__h2">Koi Series Camellia Desk MatZDB011-01</h2>
+                    <div class="info__prices">
+                        <p class="info__starting">STARTING FROM</p>
+                        <p class="info__price">$ 12.99</p>
+                    </div>
+                    <p class="info__lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                    <a href="" class="info__buy">BUY NOW</a>
+                </div>
+                <div class="product__img">
+                    <img src="./img/2sec/image 14.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="HU-1-3">
+            <div class="HU-1-3__leftpanel">
+                <img class="leftpanel__img1" src="./img/2sec/image 9.png" alt="">
+                <h1>Kraken Kitty </h1>
+                <img class="leftpanel__img2" src="./img/2sec/image 9 (1).png" alt="">
+                <img class="leftpanel__backimg" src="./img/2sec/figure.svg" alt="">
+            </div>
+            <div class="HU-1-3__rightpanel">
+                <h2>RAZER Kraken Kitty, Quartz (RZ04-02980200-R3M1)</h2>
+                <h3> STARTING FROM  <span>$ 249.99</span></h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                <div class="rightpanel__link">
+                    <a href="#">BUY NOW</a>
+                    <hr>
+                </div>
+            </div>
+        </section>  
+        <section class="HU-1-4">
+            <div class="HU-1-4__product">
+                <div class="product__info">
+                    <h2 class="info__h2">Koi Series Camellia Desk MatZDB011-01</h2>
+                    <div class="info__prices">
+                        <p class="info__starting">STARTING FROM</p>
+                        <p class="info__price">$ 12.99</p>
+                    </div>
+                    <p class="info__lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                    <a href="" class="info__buy">BUY NOW</a>
+                </div>
+                <div class="product__img">
+                    <img src="./img/2sec/image 15.svg" alt="">
+                </div>
+            </div>
+        </section>
+    </section>
 </body>
 </html>
