--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         </div>
     </main>
-    <!-- asdfsidjfoisdjfoisdjof -->
+    <!-- section 2 below -->
     <section class="recommendation">
         <section class="HU-1-2">
             <h2 class="HU-1-2__h2">The Store Recommends Viewing</h2>
@@ -100,6 +100,94 @@
                 </div>
             </div>
         </section>
+    </section>
+    <!-- section 3 below -->
+    <section class="shop">
+        <h3>Choose A Product By Category</h3>
+        <div class="shop__select">
+            <div class="shop__mouse">
+                <div class="shop__mouse-price">
+                    <p>Starting From</p>
+                    <span>$ 32.99</span>
+                </div>
+                <div class="shop__mouse-text">
+                    mice
+                </div>
+                <div class="shop__mouse-desc">
+                    Pixel-perfect precision<br>
+                    for any hand size and<br>
+                    grip style
+                </div>
+                <div class="shop__mouse-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/mouse.svg" alt="">
+            </div>
+
+            <div class="shop__pad">
+                <div class="shop__pad-price">
+                    <p>Starting From</p>
+                    <span>$ 12.99</span>
+                </div>
+                <div class="shop__pad-text">
+                    pad
+                </div>
+                <div class="shop__pad-desc">
+                    Soft, hard, and hybrid<br>
+                    designs to enhance your<br>
+                    control
+                </div>
+                <div class="shop__pad-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/pad.svg" alt="">
+            </div>
+
+            <div class="shop__headphones">
+                <div class="shop__headphones-price">
+                    <p>Starting From</p>
+                    <span>$ 65.99</span>
+                </div>
+                <div class="shop__headphones-text">
+                    head
+                </div>
+                <div class="shop__headphones-desc">
+                    Tuned for gaming,<br>
+                    lifestyle, or a perfect mix<br>
+                    of both
+                </div>
+                <div class="shop__headphones-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/headphones.svg" alt="">
+            </div>
+
+            <div class="shop__keyboard">
+                <div class="shop__keyboard-price">
+                    <p>Starting From</p>
+                    <span>$ 79.99</span>
+                </div>
+                <div class="shop__keyboard-text">
+                    keyb
+                </div>
+                <div class="shop__keyboard-desc">
+                    Optical, mechanical,and <br>
+                    every type in between
+                </div>
+                <div class="shop__keyboard-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/keyboard.svg" alt="">
+            </div>
+        </div>
     </section>
 </body>
 </html>
