--- a/index.html
+++ b/index.html
@@ -189,5 +189,63 @@
             </div>
         </div>
     </section>
+        <!-- section 4 below -->
+    <footer class="da"> 
+        <div class="stolbflex">
+            <div class="stolb">
+                <h4>Shop </h4>
+                <p>
+                  RazerStores <br>
+                  RazerCafe <br>
+                  Store Locetor <br>
+                  Purchase Programs <br>
+                  Education <br>
+                  Exclusives <br>
+                  RazerStore Rewards <br>
+                  Newsletter <br>
+                </p>
+                </div>
+                <div class="stolb">
+                 <h4>Explore</h4>
+               <p>
+                  Technology <br>
+                  Chroma RGB <br>
+                  Conceprts <br>
+                  Esports <br>
+                  Collabs <br>
+                </p>
+               </div>
+               <div class="stolb">
+                 <h4>Support </h4>
+                <p>
+                Get Help <br>
+                Ragistration & Warranty <br>
+                RazerStore Support <br>
+                RazerCare <br>
+                Manage Razer ID <br>
+                Support Videos <br>
+                Accessibility Statement <br>  
+               </p>
+              </div>
+               <div class="stolb"> 
+                  <h4>Company </h4>
+                <p>
+                  About Us <br>
+                  Careers <br>
+                  Press Room <br>
+                  ZVentures <br>
+                  Contact Us <br>
+                </p>
+              </div>
+        </div>
+      <hr color="#6d6d6d">
+      <div class="niz">
+        <div class="niz1">
+            <p>Copyright &#169 2023</p></div>
+             <div class="niz2">
+               <p>Policu United States | Change Location ></p>
+              </div>
+      </div>
+      </footer>
 </body>
 </html>
