--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="main">
         <div class="main__bg">
         <nav class="main__nav main-nav">
-            <div class="nav__elem1 nav-elem1">
+            <a href="#" class="nav__elem1 nav-elem1">
                 <div class="elem1__imgContainer">
                     <img src="./img/main/logo.svg" alt="" class="elem1__img">
                 </div>
@@ -19,14 +19,15 @@
                     <p class="elem1__text1">Game</p>
                     <p class="elem1__text2">Store</p>
                 </div>
-            </div>
+            </a>
             <div class="nav__elem2 nav-elem2">
                 <div class="elem2__searchContainer">
-                    <div class="elem2__search">Search...</div>
+                    <form action="#"></form>
+                    <input class="elem2__search" placeholder="Search..." checked type="text" name="Search">
                 </div>
-                <div class="elem2__bin">
+                <a href="#" class="elem2__bin">
                     <div class="elem2__text">1</div>
-                </div>
+                </a>
             </div>
         </nav>
         <div class="main__description main-description">
@@ -189,62 +190,62 @@
             </div>
         </div>
     </section>
-        <!-- section 4 below -->
-    <footer class="da"> 
-        <div class="stolbflex">
-            <div class="stolb">
-                <h4>Shop </h4>
-                <p>
-                  RazerStores <br>
-                  RazerCafe <br>
-                  Store Locetor <br>
-                  Purchase Programs <br>
-                  Education <br>
-                  Exclusives <br>
-                  RazerStore Rewards <br>
-                  Newsletter <br>
-                </p>
+    <!-- section 4 below -->
+    <footer class="footer"> 
+        <div class="footer__lists">
+            <div class="footer__list">
+                <ul>
+                    <li>Shop</li>
+                    <li>RazerStores</li>
+                    <li>RazerCafe</li>
+                    <li>Store Locetor</li>
+                    <li>Purchase Programs</li>
+                    <li>Education</li>
+                    <li>Exclusives</li>
+                    <li>RazerStore Rewards</li>
+                    <li>Newsletter</li>
+                </ul>
                 </div>
-                <div class="stolb">
-                 <h4>Explore</h4>
-               <p>
-                  Technology <br>
-                  Chroma RGB <br>
-                  Conceprts <br>
-                  Esports <br>
-                  Collabs <br>
-                </p>
+                <div class="footer__list">
+                    <ul>
+                        <li>Explore</li>
+                        <li>Technology</li>
+                        <li>Chroma RGB</li>
+                        <li>Conceprts</li>
+                        <li>Esports</li>
+                        <li>Collabs</li>
+                    </ul>
                </div>
-               <div class="stolb">
-                 <h4>Support </h4>
-                <p>
-                Get Help <br>
-                Ragistration & Warranty <br>
-                RazerStore Support <br>
-                RazerCare <br>
-                Manage Razer ID <br>
-                Support Videos <br>
-                Accessibility Statement <br>  
-               </p>
+               <div class="footer__list">
+                    <ul>
+                        <li>Support</li>
+                        <li>Get Help</li>
+                        <li>Ragistration & Warranty</li>
+                        <li>RazerStore Support</li>
+                        <li>RazerCare</li>
+                        <li>Manage Razer ID</li>
+                        <li>Support Videos</li>
+                        <li>Accessibility Statement</li>
+                    </ul>
               </div>
-               <div class="stolb"> 
-                  <h4>Company </h4>
-                <p>
-                  About Us <br>
-                  Careers <br>
-                  Press Room <br>
-                  ZVentures <br>
-                  Contact Us <br>
-                </p>
+               <div class="footer__list"> 
+                <ul>
+                    <li>Company</li>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Press Room</li>
+                    <li>ZVentures</li>
+                    <li>Contact Us</li>
+                </ul>
               </div>
         </div>
-      <hr color="#6d6d6d">
-      <div class="niz">
-        <div class="niz1">
-            <p>Copyright &#169 2023</p></div>
-             <div class="niz2">
-               <p>Policu United States | Change Location ></p>
-              </div>
+      <div class="footer__bottom">
+        <div class="footer__copyright">
+            <p>Copyright &#169 2023</p>
+        </div>
+        <div class="footer__policy">
+            <p>Policy United States | Change Location ></p>
+        </div>
       </div>
       </footer>
 </body>
