--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,63 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+    <footer class="HU-2-6">
+        <div class="HU-2-6__footer-flex">
+            <div class="HU-2-6__shop">
+                <h3>Shop</h3>
+                <ul>
+                    <li><a href="">RazerStores</a></li>
+                    <li><a href="">RazerCafe</a></li>
+                    <li><a href="">Store Locator</a></li>
+                    <li><a href="">Purchase Programs</a></li>
+                    <li><a href="">Education</a></li>
+                    <li><a href="">Exclusives</a></li>
+                    <li><a href="">RazerStore Rewards</a></li>
+                    <li><a href="">Newsletter</a></li>
+                </ul>
+            </div>
+            <div class="HU-2-6__explore">
+                <h3>Explore</h3>
+                <ul>
+                    <li><a href="">Technology</a></li>
+                    <li><a href="">Chroma RGB</a></li>
+                    <li><a href="">Concepts</a></li>
+                    <li><a href="">Esports</a></li>
+                    <li><a href="">Collabs</a></li>
+                </ul>
+            </div>
+            <div class="HU-2-6__support">
+                <h3>Support</h3>
+                <ul>
+                    <li><a href="">Get Help</a></li>
+                    <li><a href="">Registration & Warranty</a></li>
+                    <li><a href="">RazerStore Support</a></li>
+                    <li><a href="">RazerCare</a></li>
+                    <li><a href="">Manage Razer ID</a></li>
+                    <li><a href="">Support Videos</a></li>
+                    <li><a href="">Accessibility Statement</a></li>
+                </ul>
+            </div>
+            <div class="HU-2-6__company">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Press Room</a></li>
+                    <li><a href="">ZVentures</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr class="line">
+        <div class="HU-2-6__copyright">
+            <a href="">Copyright © 2023</a>
+            <div>
+                <a href="">Policy United States</a>
+                |
+                <a href="">Change Location ></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
