--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,30 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+    <header class="HU-2-1">
+        <div class="HU-2-1__container">
+            <a href="#" class="HU-2-1__item1">
+                <div class="HU-2-1__logo">
+                    <img class="HU-2-1__logoImg" src="./img/logo.svg" alt="">
+                </div>
+                <div class="HU-2-1__logoText">
+                    <p class="HU-2-1__logoText1" >Game</p>
+                    <p class="HU-2-1__logoText2" >Store</p>
+                </div>
+            </a>
+            <div class="HU-2-1__item2">
+                    <div class="HU-2-1__searchContainer">
+                        <form action="#"></form>
+                        <input class="HU-2-1__search" placeholder="Search..." checked type="text" name="Search">
+                    </div>
+                    <a href="#" class="HU-2-1__sortContainer">
+                        <img class="HU-2-1__sortImg" src="./img/sort.svg" alt="">
+                    </a>
+                    <a href="#" class="HU-2-1__bin">
+                        <img src="./img/bin.svg" alt="">
+                    </a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
