--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,58 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
+    <div class="wrapper">
+    <section></section>
+    <section></section>
+<section></section>
+<section class="goods">
+    <div class="goods__123">
+        <div class="HU-2-4">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="HU-2-5">
+            <div class="HU-2-5__img">
+                <img src="/img/2sec/image 15.svg" alt="">
+            </div>
+            <div class="HU-2-5__rightpanel">
+                <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                    <h3> STARTING FROM  <span>$ 12.99</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                    natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                    <div class="rightpanel__link">
+                        <a href="#">BUY NOW</a>
+                        <hr>
+                    </div>
+            </div>
+        </div>
+    </div>
+    <div class="goods__123">
+        <div class="HU-2-4">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="HU-2-5">
+            <div class="HU-2-5__img">
+                <img src="/img/2sec/image 15.svg" alt="">
+            </div>
+            <div class="HU-2-5__rightpanel">
+                <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                    <h3> STARTING FROM  <span>$ 12.99</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                    natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                    <div class="rightpanel__link">
+                        <a href="#">BUY NOW</a>
+                        <hr>
+                    </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
     
+</footer>
+
+</div>
 </body>
 </html>
