--- a/index2.html
+++ b/index2.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
         </div>
-        <hr class="line">
+        <hr class="HU-2-6__line">
         <div class="HU-2-6__copyright">
             <a href="">Copyright © 2023</a>
             <div>
