--- a/index.html
+++ b/index.html
@@ -9,8 +9,45 @@
 </head>
 <body>
     <main class="main">
-      
+        <div class="main__bg">
+        <nav class="main__nav main-nav">
+            <div class="nav__elem1 nav-elem1">
+                <div class="elem1__imgContainer">
+                    <img src="./img/main/logo.svg" alt="" class="elem1__img">
+                </div>
+                <div class="elem1__text">
+                    <p class="elem1__text1">Game</p>
+                    <p class="elem1__text2">Store</p>
+                </div>
+            </div>
+            <div class="nav__elem2 nav-elem2">
+                <div class="elem2__searchContainer">
+                    <div class="elem2__search">Search...</div>
+                </div>
+                <div class="elem2__bin">
+                    <div class="elem2__text">1</div>
+                </div>
+            </div>
+        </nav>
+        <div class="main__description main-description">
+            <div class="description__square">
+                <div class="description__imgContainer">
+                    <img src="./img/main/Rectangle.svg" alt="" class="description__img">
+                </div>
+                <h1 class="description__h1">The best devices at the best prices
+                </h1>
+                <p class="description__text"> We make every effort to create the best opportunity to make the right and informed choice. Continues in stores, where our priority is to give visitors the opportunity to personally evaluate the qualities of the products of interest and, accordingly, to make a purchase decision based not on the inscriptions on the packaging, but on personal experience.
+                </p>
+                <div class="description__buttonContainer">
+                    <a href="#" class="description__link">
+                    <div class="description__button">GO TO SHOP</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
+    <!-- section 2 below -->
     <section class="recommendation">
         <section class="HU-1-2">
             <h2 class="HU-1-2__h2">The Store Recommends Viewing</h2>
@@ -25,16 +62,16 @@
                     <a href="" class="info__buy">BUY NOW</a>
                 </div>
                 <div class="product__img">
-                    <img src="./img/image 14.svg" alt="">
+                    <img src="./img/2sec/image 14.svg" alt="">
                 </div>
             </div>
         </section>
         <section class="HU-1-3">
             <div class="HU-1-3__leftpanel">
-                <img class="leftpanel__img1" src="./img/image 9.svg" alt="">
+                <img class="leftpanel__img1" src="./img/2sec/image 9.png" alt="">
                 <h1>Kraken Kitty </h1>
-                <img class="leftpanel__img2" src="./img/image 9 (1).svg" alt="">
-                <img class="leftpanel__backimg" src="./img/figure.svg" alt="">
+                <img class="leftpanel__img2" src="./img/2sec/image 9 (1).png" alt="">
+                <img class="leftpanel__backimg" src="./img/2sec/figure.svg" alt="">
             </div>
             <div class="HU-1-3__rightpanel">
                 <h2>RAZER Kraken Kitty, Quartz (RZ04-02980200-R3M1)</h2>
@@ -42,7 +79,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
                 natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
                 <div class="rightpanel__link">
-                    <a href="#"><b>BUY NOW</b></a>
+                    <a href="#">BUY NOW</a>
                     <hr>
                 </div>
             </div>
@@ -59,10 +96,156 @@
                     <a href="" class="info__buy">BUY NOW</a>
                 </div>
                 <div class="product__img">
-                    <img src="./img/image 15.svg" alt="">
+                    <img src="./img/2sec/image 15.svg" alt="">
                 </div>
             </div>
         </section>
     </section>
+    <!-- section 3 below -->
+    <section class="shop">
+        <h3>Choose A Product By Category</h3>
+        <div class="shop__select">
+            <div class="shop__mouse">
+                <div class="shop__mouse-price">
+                    <p>Starting From</p>
+                    <span>$ 32.99</span>
+                </div>
+                <div class="shop__mouse-text">
+                    mice
+                </div>
+                <div class="shop__mouse-desc">
+                    Pixel-perfect precision<br>
+                    for any hand size and<br>
+                    grip style
+                </div>
+                <div class="shop__mouse-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/mouse.svg" alt="">
+            </div>
+
+            <div class="shop__pad">
+                <div class="shop__pad-price">
+                    <p>Starting From</p>
+                    <span>$ 12.99</span>
+                </div>
+                <div class="shop__pad-text">
+                    pad
+                </div>
+                <div class="shop__pad-desc">
+                    Soft, hard, and hybrid<br>
+                    designs to enhance your<br>
+                    control
+                </div>
+                <div class="shop__pad-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/pad.svg" alt="">
+            </div>
+
+            <div class="shop__headphones">
+                <div class="shop__headphones-price">
+                    <p>Starting From</p>
+                    <span>$ 65.99</span>
+                </div>
+                <div class="shop__headphones-text">
+                    head
+                </div>
+                <div class="shop__headphones-desc">
+                    Tuned for gaming,<br>
+                    lifestyle, or a perfect mix<br>
+                    of both
+                </div>
+                <div class="shop__headphones-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/headphones.svg" alt="">
+            </div>
+
+            <div class="shop__keyboard">
+                <div class="shop__keyboard-price">
+                    <p>Starting From</p>
+                    <span>$ 79.99</span>
+                </div>
+                <div class="shop__keyboard-text">
+                    keyb
+                </div>
+                <div class="shop__keyboard-desc">
+                    Optical, mechanical,and <br>
+                    every type in between
+                </div>
+                <div class="shop__keyboard-btn">
+                    <a href="">
+                        <div>Go to category</div>
+                    </a>
+                </div>
+                <img src="./img/3sec/keyboard.svg" alt="">
+            </div>
+        </div>
+    </section>
+        <!-- section 4 below -->
+    <footer class="da"> 
+        <div class="stolbflex">
+            <div class="stolb">
+                <h4>Shop </h4>
+                <p>
+                  RazerStores <br>
+                  RazerCafe <br>
+                  Store Locetor <br>
+                  Purchase Programs <br>
+                  Education <br>
+                  Exclusives <br>
+                  RazerStore Rewards <br>
+                  Newsletter <br>
+                </p>
+                </div>
+                <div class="stolb">
+                 <h4>Explore</h4>
+               <p>
+                  Technology <br>
+                  Chroma RGB <br>
+                  Conceprts <br>
+                  Esports <br>
+                  Collabs <br>
+                </p>
+               </div>
+               <div class="stolb">
+                 <h4>Support </h4>
+                <p>
+                Get Help <br>
+                Ragistration & Warranty <br>
+                RazerStore Support <br>
+                RazerCare <br>
+                Manage Razer ID <br>
+                Support Videos <br>
+                Accessibility Statement <br>  
+               </p>   
+              </div>
+               <div class="stolb"> 
+                  <h4>Company </h4>
+                <p>
+                  About Us <br>
+                  Careers <br>
+                  Press Room <br>
+                  ZVentures <br>
+                  Contact Us <br>
+                </p>
+              </div>
+        </div>
+      <hr color="#6d6d6d">
+      <div class="niz">
+        <div class="niz1">
+            <p>Copyright &#169 2023</p></div>
+             <div class="niz2">
+               <p>Policu United States | Change Location ></p>
+              </div>
+        </div>
+      </footer>
 </body>
 </html>
