--- a/index2.html
+++ b/index2.html
@@ -178,7 +178,7 @@
                 <a class="HU-2-4__buy" href="">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
-                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
                 <img src="./img/2sec/image 16.svg" alt="">
                 <h2 class="HU-2-4__starting">STARTING FROM 
                     <span>$ 12.99</span>
@@ -198,7 +198,7 @@
                 <a class="HU-2-4__buy" href="">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
-                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
                 <img src="./img/2sec/image 16.svg" alt="">
                 <h2 class="HU-2-4__starting">STARTING FROM 
                     <span>$ 12.99</span>
@@ -218,7 +218,7 @@
                 <a class="HU-2-4__buy" href="">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
-                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
                 <img src="./img/2sec/image 16.svg" alt="">
                 <h2 class="HU-2-4__starting">STARTING FROM 
                     <span>$ 12.99</span>
