--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
         <div class="HU-2-1__container">
             <a href="#" class="HU-2-1__item1">
                 <div class="HU-2-1__logo">
-                    <img class="HU-2-1__logoImg" src="./img/logo.svg" alt="">
+                    <img class="HU-2-1__logoImg" src="./img/HU-2-1/logo.svg" alt="">
                 </div>
                 <div class="HU-2-1__logoText">
                     <p class="HU-2-1__logoText1" >Game</p>
@@ -20,16 +20,16 @@
                 </div>
             </a>
             <div class="HU-2-1__item2">
-                    <div class="HU-2-1__searchContainer">
-                        <form action="#"></form>
-                        <input class="HU-2-1__search" placeholder="Search..." checked type="text" name="Search">
-                    </div>
-                    <a href="#" class="HU-2-1__sortContainer">
-                        <img class="HU-2-1__sortImg" src="./img/sort.svg" alt="">
-                    </a>
-                    <a href="#" class="HU-2-1__bin">
-                        <img src="./img/bin.svg" alt="">
-                    </a>
+                <div class="HU-2-1__searchContainer">
+                    <form action="#"></form>
+                    <input class="HU-2-1__search" placeholder="Search..." checked type="text" name="Search">
+                </div>
+                <a href="#" class="HU-2-1__sortContainer">
+                    <img class="HU-2-1__sortImg" src="./img/HU-2-1/sort.svg" alt="">
+                </a>
+                <a href="#" class="HU-2-1__bin">
+                    <img src="./img/HU-2-1/bin.svg" alt="">
+                </a>
             </div>
         </div>
     </header>
