--- a/index2.html
+++ b/index2.html
@@ -226,7 +226,7 @@
         <div class="goods__123">
             <div class="HU-2-5">
                 <div class="HU-2-5__img">
-                    <img src="/img/HU-2-5/image 15.svg" alt="">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
                 </div>
                 <div class="HU-2-5__rightpanel">
                     <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
@@ -262,7 +262,7 @@
         <div class="goods__123">
             <div class="HU-2-5">
                 <div class="HU-2-5__img">
-                    <img src="/img/HU-2-5/image 15.svg" alt="">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
                 </div>
                 <div class="HU-2-5__rightpanel">
                     <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
@@ -298,7 +298,7 @@
         <div class="goods__123">
             <div class="HU-2-5">
                 <div class="HU-2-5__img">
-                    <img src="/img/HU-2-5/image 15.svg" alt="">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
                 </div>
                 <div class="HU-2-5__rightpanel">
                     <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
