--- a/index3.html
+++ b/index3.html
@@ -6,8 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Hustle - the best gaming store ever</title>
+
 </head>
 <body>
-    
+    <section class="HU-3-1">
+        <nav>
+            <a href=""><img src="./img/HU-3-1/Group 30.svg" alt=""></a>
+            <a href=""><img src="./img/HU-3-1/Group 29.svg" alt=""></a>
+        </nav>
+        <div class="HU-3-1__product">
+            <div class="product__img">
+                <img src="./img/HU-3-1/image 15.png" alt="">
+                <div class="img__small">
+                    <img src="./img/HU-3-1/image 15.png" alt="">
+                    <img src="./img/HU-3-1/img_0_834_737_2_1.jpg" alt="">
+                    <img src="./img/HU-3-1/1244019_middle.jpg" alt="">
+                    <img src="./img/HU-3-1/U0578836_7big.jpg" alt="">
+                </div>
+            </div>
+            <div class="product__description">
+                <h2 class="HU-3-1__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <h2 class="HU-3-1__price">PRICE: $ 12.99</h2>
+                <ul>
+                    <li>ORDER CODE: 69272</li>
+                    <li>MANUFACTURER: VARMILO</li>
+                    <li>COLOR: RED</li>
+                </ul>
+                <div class="description__bottom">
+                    <a href="">Add to card</a>
+                    <div>
+                        <p class="bottom__rating">USER RATING:</p>
+                        <div class="bottom__stars">
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                        </div>
+                        <p class="bottom__reviews">3 reviews</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
