--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,34 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+    <section class="HU-3-4">
+            <img class="HU-3-4__blot" src="./img/HU-3-4/blot.svg" alt="">
+        <div class="HU-3-4__title">
+            <h1>FEEDBACK AND QUESTIONS</h1>
+        </div>
+        <div class="feedback">
+            <div class="feedback__block1">
+                <h2 class="feedback__name">Vitaly Maxutenko</h2>
+                <p class="feedback__date">02 January 2022</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">If you purchase the desk mat at a discounted price, it is a top-quality product for its value. It is intriguing to know how much it will get dirty over time and how it will hold up after washing.</p>
+                <p class="feedback__adv">Advantages: Large, beautiful, stitched on all sides.</p>
+            </div>
+            <div class="feedback__block2">
+                <h2 class="feedback__name">Anna Tkachuk</h2>
+                <p class="feedback__date">24 December 2021</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">My son said that the desk mat is the best one he has ever had.</p>
+                <p class="feedback__adv">Advantages: It slides perfectly.</p>
+            </div>
+            <div class="feedback__block3">
+                <h2 class="feedback__name">Alex</h2>
+                <p class="feedback__date">03 December 2022</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">Excellent surface.</p>
+                <p class="feedback__adv">Advantages: Large, slides smoothly.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
