--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@
                 <ul>
                     <li>ORDER CODE: 69272</li>
                     <li>MANUFACTURER: VARMILO</li>
-                    <li>COLOR: RED</li>
+                    <li>COLOR: RED;</li>
                 </ul>
                 <div class="description__bottom">
                     <a href="">Add to card</a>
