--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,21 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+    <section class="HU-3-2">
+        <div class="HU-3-2__line">
+            <hr>
+        </div>
+        <div class="HU-3-2__h2">
+            <h2>Product Description</h2>
+        </div>
+        <div class="HU-3-2__desc">
+            The <u>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</u> is a visually stunning and highly functional desk mat.
+             With its elegant Peony floral motif, extra-large size, and smooth, low-friction surface, it provides ample space 
+             for your keyboard and mouse while enhancing speed and precision. The high-quality materials ensure durability, 
+             and the water-resistant and non-slip design adds practicality. Elevate your gaming or workspace with this beautiful 
+             and performance-driven desk mat.
+        </div>
+
+    </section>
 </body>
 </html>
