--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,165 @@
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+
+    <section class="HU-3-1">
+        <nav>
+            <a href=""><img src="./img/HU-3-1/Group 30.svg" alt=""></a>
+            <a href=""><img src="./img/HU-3-1/Group 29.svg" alt=""></a>
+        </nav>
+        <div class="HU-3-1__product">
+            <div class="product__img">
+                <img src="./img/HU-3-1/image 15.png" alt="">
+                <div class="img__small">
+                    <img src="./img/HU-3-1/image 15.png" alt="">
+                    <img src="./img/HU-3-1/img_0_834_737_2_1.jpg" alt="">
+                    <img src="./img/HU-3-1/1244019_middle.jpg" alt="">
+                    <img src="./img/HU-3-1/U0578836_7big.jpg" alt="">
+                </div>
+            </div>
+            <div class="product__description">
+                <h2 class="HU-3-1__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <h2 class="HU-3-1__price">PRICE: $ 12.99</h2>
+                <ul>
+                    <li>ORDER CODE: 69272</li>
+                    <li>MANUFACTURER: VARMILO</li>
+                    <li>COLOR: RED;</li>
+                </ul>
+                <div class="description__bottom">
+                    <a href="">Add to card</a>
+                    <div>
+                        <p class="bottom__rating">USER RATING:</p>
+                        <div class="bottom__stars">
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                            <div class="bottom__star"></div>
+                        </div>
+                        <p class="bottom__reviews">3 reviews</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="HU-3-2">
+        <div class="HU-3-2__line">
+            <hr>
+        </div>
+        <div class="HU-3-2__h2">
+            <h2>Product Description</h2>
+        </div>
+        <div class="HU-3-2__desc">
+            The <u>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</u> is a visually stunning and highly functional desk mat.
+             With its elegant Peony floral motif, extra-large size, and smooth, low-friction surface, it provides ample space 
+             for your keyboard and mouse while enhancing speed and precision. The high-quality materials ensure durability, 
+             and the water-resistant and non-slip design adds practicality. Elevate your gaming or workspace with this beautiful 
+             and performance-driven desk mat.
+        </div>
+    </section>
+
+        <section class="HU-3-3">
+            <h2>Characteristics</h2>
+            <div class="HU-3-3__lists">
+                <ul>
+                    <li> Size:900mmx400mm</li>
+                    <li>Thicness: 3mm</li>
+                    <li> Surface Material: fabric</li>
+                </ul>
+                <ul>
+                    <li> Pad Type: game</li>
+                    <li> P/N:ZDB008-01</li>
+                </ul>
+            </div>
+        </section>
+
+    <section class="HU-3-4">
+        <div class="HU-3-4__title">
+            <h2>FEEDBACK AND QUESTIONS</h2>
+        </div>
+        <div class="feedback">
+            <div class="feedback__block1">
+                <h2 class="feedback__name">Vitaly Maxutenko</h2>
+                <p class="feedback__date">02 January 2022</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">If you purchase the desk mat at a discounted price, it is a top-quality product for its value. It is intriguing to know how much it will get dirty over time and how it will hold up after washing.</p>
+                <p class="feedback__adv">Advantages: Large, beautiful, stitched on all sides.</p>
+            </div>
+            <div class="feedback__block2">
+                <h2 class="feedback__name">Anna Tkachuk</h2>
+                <p class="feedback__date">24 December 2021</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">My son said that the desk mat is the best one he has ever had.</p>
+                <p class="feedback__adv">Advantages: It slides perfectly.</p>
+            </div>
+            <div class="feedback__block3">
+                <h2 class="feedback__name">Alex</h2>
+                <p class="feedback__date">03 December 2022</p>
+                <img src="./img/HU-3-4/5star.png" alt="">
+                <p class="feedback__comment">Excellent surface.</p>
+                <p class="feedback__adv">Advantages: Large, slides smoothly.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="HU-3-5"> 
+        <div class="HU-3-5__lists">
+            <div class="HU-3-5__list">
+                <ul>
+                    <li>Shop</li>
+                    <li>RazerStores</li>
+                    <li>RazerCafe</li>
+                    <li>Store Locetor</li>
+                    <li>Purchase Programs</li>
+                    <li>Education</li>
+                    <li>Exclusives</li>
+                    <li>RazerStore Rewards</li>
+                    <li>Newsletter</li>
+                </ul>
+                </div>
+                <div class="HU-3-5__list">
+                    <ul>
+                        <li>Explore</li>
+                        <li>Technology</li>
+                        <li>Chroma RGB</li>
+                        <li>Conceprts</li>
+                        <li>Esports</li>
+                        <li>Collabs</li>
+                    </ul>
+               </div>
+               <div class="HU-3-5__list">
+                    <ul>
+                        <li>Support</li>
+                        <li>Get Help</li>
+                        <li>Ragistration & Warranty</li>
+                        <li>RazerStore Support</li>
+                        <li>RazerCare</li>
+                        <li>Manage Razer ID</li>
+                        <li>Support Videos</li>
+                        <li>Accessibility Statement</li>
+                    </ul>
+              </div>
+               <div class="HU-3-5__list"> 
+                <ul>
+                    <li>Company</li>
+                    <li>About Us</li>
+                    <li>Careers</li>
+                    <li>Press Room</li>
+                    <li>ZVentures</li>
+                    <li>Contact Us</li>
+                </ul>
+              </div>
+        </div>
+      <div class="HU-3-5__bottom">
+        <div class="HU-3-5__copyright">
+            <p>Copyright &#169 2023</p>
+        </div>
+        <div class="HU-3-5__policy">
+            <p>Policy United States | Change Location ></p>
+        </div>
+      </div>
+      </footer>
+
 </body>
 </html>
