--- a/index2.html
+++ b/index2.html
@@ -4,10 +4,372 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
     <title>Hustle - the best gaming store ever</title>
 </head>
 <body>
-    
+    <section class="HU-2">
+    <header class="HU-2-1">
+        <div class="HU-2-1__container">
+            <a href="#" class="HU-2-1__item1">
+                <div class="HU-2-1__logo">
+                    <img class="HU-2-1__logoImg" src="./img/HU-2-1/logo.svg" alt="">
+                </div>
+                <div class="HU-2-1__logoText">
+                    <p class="HU-2-1__logoText1" >Game</p>
+                    <p class="HU-2-1__logoText2" >Store</p>
+                </div>
+            </a>
+            <div class="HU-2-1__item2">
+                <div class="HU-2-1__searchContainer">
+                    <form action="#"></form>
+                    <input class="HU-2-1__search" placeholder="Search..." checked type="text" name="Search">
+                </div>
+                <a href="#" class="HU-2-1__sortContainer">
+                    <img class="HU-2-1__sortImg" src="./img/HU-2-1/sort.svg" alt="">
+                </a>
+                <a href="#" class="HU-2-1__bin">
+                    <img src="./img/HU-2-1/bin.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </header>
+    <main class="">
+        <div class="HU-2-2">
+            <ul class="HU-2-2__ul">
+                <li class="li__first">
+                    <p>carpet thikness</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a> 
+                </li>
+                <li class="li__unactive">
+                    <label for="flexCheckDefault__1">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__1">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__2">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__2">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__3">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__3">
+                </li>
+                <li class="li__unactive bottom">
+                    <label for="flexCheckDefault__4">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__4">
+                </li>
+            </ul>
+            <ul class="HU-2-2__ul">
+                <li class="li__first">
+                    <p>carpet thikness</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                    
+                </li>
+                <li class="li__unactive">
+                    <label for="flexCheckDefault__5">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__5">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__6">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__6">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__7">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__7">
+                </li>
+                <li class="li__unactive bottom">
+                    <label for="flexCheckDefault__8">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__8">
+                </li>
+            </ul>
+            <ul class="HU-2-2__ul">
+                <li class="li__first">
+                    <p>carpet thikness</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                </li>
+                <li class="li__unactive">
+                    <label for="flexCheckDefault__9">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__9">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__10">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__10">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__11">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__11">
+                </li>
+                <li class="li__unactive bottom">
+                    <label for="flexCheckDefault__12">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__12">
+                </li>
+            </ul>
+            <ul class="HU-2-2__color">
+                <li class="color__first">
+                    <p>color</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                </li>
+                <li class="color__unactiv">
+                    <label for="flexCheckDefault__13">blue</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__13">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__14">red</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__14">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__15">white</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__15">
+                </li>
+                <li class="color__activ bottom">
+                    <label for="flexCheckDefault__16">black</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__16">
+                </li>
+            </ul>
+            <ul class="HU-2-2__ul">
+                <li class="li__first">
+                    <p>carpet thikness</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                </li>
+                <li class="li__unactive">
+                    <label for="flexCheckDefault__17">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__17">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__18">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__18">
+                </li>
+                <li class="li__active">
+                    <label for="flexCheckDefault__19">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__19">
+                </li>
+                <li class="li__unactive bottom">
+                    <label for="flexCheckDefault__20">lorem ipsum</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__20">
+                </li>
+            </ul>
+            <ul class="HU-2-2__color">
+                <li class="color__first">
+                    <p>size</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                </li>
+                <li class="color__unactiv">
+                    <label for="flexCheckDefault__21">blue</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__21">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__22">red</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__22">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__23">white</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__23">
+                </li>
+                <li class="color__activ bottom">
+                    <label for="flexCheckDefault__24">black</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__24">
+                </li>
+            </ul>
+            <ul class="HU-2-2__color">
+                <li class="color__first">
+                    <p>color</p>
+                    <a href=""><img src="./img/HU-2-2/Polygon 1.svg" alt=""></a>
+                </li>
+                <li class="color__unactiv">
+                    <label for="flexCheckDefault__25">blue</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__25">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__26">red</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__26">
+                </li>
+                <li class="color__activ">
+                    <label for="flexCheckDefault__27">white</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault__27">
+                </li>
+                <li class="color__activ bottom">
+                    <label for="flexCheckDefault">black</label>
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                </li>
+            </ul>
+        </div>
+        <div class="link__img">
+            <ul>
+                <li><a href=""><img  src="img/HU-2-3/Group 102.svg" alt=""></a></li>
+                <li><a href=""><img  src="img/HU-2-3/Group 103.svg" alt=""></a></li>
+                <li><a href=""><img  src="img/HU-2-3/Group 104.svg" alt=""></a></li>
+                <li><a href=""><img  src="img/HU-2-3/Group 105.svg" alt=""></a></li>
+                <li><a href=""><img  src="img/HU-2-3/Group 106.svg" alt=""></a></li>
+                <li><a href=""><img  src="img/HU-2-3/Group 107.svg" alt=""></a></li>
+            </ul>  
+        </div>
+        <div class="HU-2-4__carpetwrapper">
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <img src="./img/HU-2-4/image 15.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
+                <img src="./img/HU-2-4/image 16.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+        </div>
+        <div class="goods__123">
+            <div class="HU-2-5">
+                <div class="HU-2-5__img">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
+                </div>
+                <div class="HU-2-5__rightpanel">
+                    <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                    <h3> STARTING FROM  <span>$ 12.99</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                    natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                    <div class="rightpanel__link">
+                        <a href="#">BUY NOW</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="HU-2-4__carpetwrapper">
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <img src="./img/HU-2-4/image 15.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
+                <img src="./img/HU-2-4/image 16.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+        </div>
+        <div class="goods__123">
+            <div class="HU-2-5">
+                <div class="HU-2-5__img">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
+                </div>
+                <div class="HU-2-5__rightpanel">
+                    <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                    <h3> STARTING FROM  <span>$ 12.99</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                    natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                    <div class="rightpanel__link">
+                        <a href="#">BUY NOW</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="HU-2-4__carpetwrapper">
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                <img src="./img/HU-2-4/image 15.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+            <div class="HU-2-4__carpets">
+                <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
+                <img src="./img/HU-2-4/image 16.svg" alt="">
+                <h2 class="HU-2-4__starting">STARTING FROM 
+                    <span>$ 12.99</span>
+                </h2>
+                <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
+                <a class="HU-2-4__buy" href="">BUY NOW</a>
+            </div>
+        </div>
+        <div class="goods__123">
+            <div class="HU-2-5">
+                <div class="HU-2-5__img">
+                    <img src="./img/HU-2-5/image 15.svg" alt="">
+                </div>
+                <div class="HU-2-5__rightpanel">
+                    <h2>Varmilo Peony Desk Mat XL Speed (ZDB008-01)</h2>
+                    <h3> STARTING FROM  <span>$ 12.99</span></h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
+                    natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
+                    <div class="rightpanel__link">
+                        <a href="#">BUY NOW</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+</section>
+<footer class="HU-2-6">
+    <div class="HU-2-6__footer-flex">
+        <div class="HU-2-6__shop">
+            <h3>Shop</h3>
+            <ul>
+                <li><a href="">RazerStores</a></li>
+                <li><a href="">RazerCafe</a></li>
+                <li><a href="">Store Locator</a></li>
+                <li><a href="">Purchase Programs</a></li>
+                <li><a href="">Education</a></li>
+                <li><a href="">Exclusives</a></li>
+                <li><a href="">RazerStore Rewards</a></li>
+                <li><a href="">Newsletter</a></li>
+            </ul>
+        </div>
+        <div class="HU-2-6__explore">
+            <h3>Explore</h3>
+            <ul>
+                <li><a href="">Technology</a></li>
+                <li><a href="">Chroma RGB</a></li>
+                <li><a href="">Concepts</a></li>
+                <li><a href="">Esports</a></li>
+                <li><a href="">Collabs</a></li>
+            </ul>
+        </div>
+        <div class="HU-2-6__support">
+            <h3>Support</h3>
+            <ul>
+                <li><a href="">Get Help</a></li>
+                <li><a href="">Registration & Warranty</a></li>
+                <li><a href="">RazerStore Support</a></li>
+                <li><a href="">RazerCare</a></li>
+                <li><a href="">Manage Razer ID</a></li>
+                <li><a href="">Support Videos</a></li>
+                <li><a href="">Accessibility Statement</a></li>
+            </ul>
+        </div>
+        <div class="HU-2-6__company">
+            <h3>Company</h3>
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Press Room</a></li>
+                <li><a href="">ZVentures</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+    <hr class="HU-2-6__line">
+    <div class="HU-2-6__copyright">
+        <a href="">Copyright © 2023</a>
+        <div>
+            <a href="">Policy United States</a>
+            |
+            <a href="">Change Location ></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
