--- a/index2.html
+++ b/index2.html
@@ -211,7 +211,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
                 <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
@@ -220,7 +220,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
         </div>
         <div class="goods__123">
@@ -234,7 +234,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
                     natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
                     <div class="rightpanel__link">
-                        <a href="#">BUY NOW</a>
+                        <a href="./index3.html">BUY NOW</a>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
                 <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
@@ -256,7 +256,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
         </div>
         <div class="goods__123">
@@ -270,7 +270,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
                     natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
                     <div class="rightpanel__link">
-                        <a href="#">BUY NOW</a>
+                        <a href="./index3.html">BUY NOW</a>
                     </div>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
             <div class="HU-2-4__carpets">
                 <h2 class="HU-2-4__h2">Varmilo Crane Desk Mat XL (ZDB047-01)</h2>
@@ -292,7 +292,7 @@
                     <span>$ 12.99</span>
                 </h2>
                 <p class="HU-2-4__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore mag...</p>
-                <a class="HU-2-4__buy" href="">BUY NOW</a>
+                <a class="HU-2-4__buy" href="./index3.html">BUY NOW</a>
             </div>
         </div>
         <div class="goods__123">
@@ -306,7 +306,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nesciunt, deleniti distinctio perferendis fugit, molestiae rem dolor ducimus illum, 
                     natus sit error rerum eius iure! Harum tempora natus sint provident.</p>
                     <div class="rightpanel__link">
-                        <a href="#">BUY NOW</a>
+                        <a href="./index3.html">BUY NOW</a>
                     </div>
                 </div>
             </div>
