--- a/index.html
+++ b/index.html
@@ -195,47 +195,47 @@
         <div class="footer__lists">
             <div class="footer__list">
                 <ul>
-                    <li>Shop</li>
-                    <li>RazerStores</li>
-                    <li>RazerCafe</li>
-                    <li>Store Locetor</li>
-                    <li>Purchase Programs</li>
-                    <li>Education</li>
-                    <li>Exclusives</li>
-                    <li>RazerStore Rewards</li>
-                    <li>Newsletter</li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">RazerStores</a></li>
+                    <li><a href="#">RazerCafe</a></li>
+                    <li><a href="#">Store Locetor</a></li>
+                    <li><a href="#">Purchase Programs</a></li>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Exclusives</a></li>
+                    <li><a href="#">RazerStore Rewards</a></li>
+                    <li><a href="#">Newsletter</a></li>
                 </ul>
                 </div>
                 <div class="footer__list">
                     <ul>
-                        <li>Explore</li>
-                        <li>Technology</li>
-                        <li>Chroma RGB</li>
-                        <li>Conceprts</li>
-                        <li>Esports</li>
-                        <li>Collabs</li>
+                        <li><a href="#">Explore</a></li>
+                        <li><a href="#">Technology</a></li>
+                        <li><a href="#">Chroma RGB</a></li>
+                        <li><a href="#">Conceprts</a></li>
+                        <li><a href="#">Esports</a></li>
+                        <li><a href="#">Collabs</a></li>
                     </ul>
                </div>
                <div class="footer__list">
                     <ul>
-                        <li>Support</li>
-                        <li>Get Help</li>
-                        <li>Ragistration & Warranty</li>
-                        <li>RazerStore Support</li>
-                        <li>RazerCare</li>
-                        <li>Manage Razer ID</li>
-                        <li>Support Videos</li>
-                        <li>Accessibility Statement</li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">Get Help</a></li>
+                        <li><a href="#">Registration & Warranty</a></li>
+                        <li><a href="#">RazerStore Support</a></li>
+                        <li><a href="#">RazerCare</a></li>
+                        <li><a href="#">Manage Razer ID</a></li>
+                        <li><a href="#">Support Videos</a></li>
+                        <li><a href="#">Accessibility Statement</a></li>
                     </ul>
               </div>
                <div class="footer__list"> 
                 <ul>
-                    <li>Company</li>
-                    <li>About Us</li>
-                    <li>Careers</li>
-                    <li>Press Room</li>
-                    <li>ZVentures</li>
-                    <li>Contact Us</li>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Press Room</a></li>
+                    <li><a href="#">ZVentures</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
         </div>
