--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="footer__lists">
             <div class="footer__list">
                 <ul>
-                    <li><a href="#">Shop</a></li>
+                    <li>Shop</li>
                     <li><a href="#">RazerStores</a></li>
                     <li><a href="#">RazerCafe</a></li>
                     <li><a href="#">Store Locetor</a></li>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="footer__list">
                     <ul>
-                        <li><a href="#">Explore</a></li>
+                        <li>Explore</li>
                         <li><a href="#">Technology</a></li>
                         <li><a href="#">Chroma RGB</a></li>
                         <li><a href="#">Conceprts</a></li>
@@ -218,7 +218,7 @@
                </div>
                <div class="footer__list">
                     <ul>
-                        <li><a href="#">Support</a></li>
+                        <li>Support</li>
                         <li><a href="#">Get Help</a></li>
                         <li><a href="#">Registration & Warranty</a></li>
                         <li><a href="#">RazerStore Support</a></li>
@@ -230,7 +230,7 @@
               </div>
                <div class="footer__list"> 
                 <ul>
-                    <li><a href="#">Company</a></li>
+                    <li>Company</li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Careers</a></li>
                     <li><a href="#">Press Room</a></li>
