--- a/index3.html
+++ b/index3.html
@@ -110,7 +110,7 @@
         </div>
     </section>
 
-    <footer class="HU-3-5"> 
+    <!-- <footer class="HU-3-5"> 
         <div class="HU-3-5__lists">
             <div class="HU-3-5__list">
                 <ul>
@@ -155,6 +155,64 @@
                     <li>Press Room</li>
                     <li>ZVentures</li>
                     <li>Contact Us</li>
+                </ul>
+              </div>
+        </div>
+      <div class="HU-3-5__bottom">
+        <div class="HU-3-5__copyright">
+            <p>Copyright &#169 2023</p>
+        </div>
+        <div class="HU-3-5__policy">
+            <p>Policy United States | Change Location ></p>
+        </div>
+      </div>
+      </footer> -->
+
+      <footer class="HU-3-5"> 
+        <div class="HU-3-5__lists">
+            <div class="HU-3-5__list">
+                <ul>
+                    <li>Shop</li>
+                    <li><a href="#">RazerStores</a></li>
+                    <li><a href="#">RazerCafe</a></li>
+                    <li><a href="#">Store Locetor</a></li>
+                    <li><a href="#">Purchase Programs</a></li>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Exclusives</a></li>
+                    <li><a href="#">RazerStore Rewards</a></li>
+                    <li><a href="#">Newsletter</a></li>
+                </ul>
+                </div>
+                <div class="HU-3-5__list">
+                    <ul>
+                        <li>Explore</li>
+                        <li><a href="#">Technology</a></li>
+                        <li><a href="#">Chroma RGB</a></li>
+                        <li><a href="#">Conceprts</a></li>
+                        <li><a href="#">Esports</a></li>
+                        <li><a href="#">Collabs</a></li>
+                    </ul>
+               </div>
+               <div class="HU-3-5__list">
+                    <ul>
+                        <li>Support</li>
+                        <li><a href="#">Get Help</a></li>
+                        <li><a href="#">Registration & Warranty</a></li>
+                        <li><a href="#">RazerStore Support</a></li>
+                        <li><a href="#">RazerCare</a></li>
+                        <li><a href="#">Manage Razer ID</a></li>
+                        <li><a href="#">Support Videos</a></li>
+                        <li><a href="#">Accessibility Statement</a></li>
+                    </ul>
+              </div>
+               <div class="HU-3-5__list"> 
+                <ul>
+                    <li>Company</li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Press Room</a></li>
+                    <li><a href="#">ZVentures</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
         </div>
